fixed overflow-x overflowin

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -17,6 +17,7 @@ body {
 }
 
 .body-wrapper {
+  overflow-x: hidden;
   padding-left: 8rem;
 
   @include respond-to('sm') {
